--- a/_posts/2022-03-01-0228-0306.md
+++ b/_posts/2022-03-01-0228-0306.md
@@ -1125,3 +1125,93 @@ HTTP는 자체적으로 요청을 위한 간단한 인증요구/응답 체계를
 
 - ETag: 엔터티에 대한 엔터티 태그
 - Last-Modified: 가장 최근 이 엔터티가 변경된 일시
+
+<br />
+<br />
+<br />
+
+## 0304
+
+# 컴포넌트 & props
+
+컴포넌트는 UI를 구성하는 조각에 해당하며, 독립적으로 분리되어 재사용을 목적으로 사용한다.  
+React 앱에서 컴포넌트는 개별적인 파일로 분리되어 관리한다.  
+버튼, 검색 폼, 캘린더, 모달 다이얼로그 등은 대표적인 컴포넌트의 예로 앱의 여러 부분에서 재사용된다.
+
+**컴포넌트 트리**  
+컴포넌트는 다른 컴포넌트를 내부에 포함할 수 있다. 포함된 컴포넌트는 하위 컴포넌트, 포함하는
+컴포넌트는 상위 컴포넌트가 된다.
+
+## 컴포넌트 타입
+
+컴포넌트는 재사용을 목적으로 설계한다.  
+ECMAScript에서는 재사용 가능한 설계 구현을 위해 함수 또는 클래스를 사용한다.  
+함수, 클래스 타입이 재사용을 위한 React 컴포넌트의 타입이다.
+
+### 함수 컴포넌트
+
+React 컴포넌트는 개념상 JS 함수와 유사하다.  
+컴포넌트 외부로부터 속성(props)을 전달 받아 어떻게 UI를 구성해야 할지 설정하여 React 요소(JSX를 바벨이 변환 처리)로 반환한다.
+
+```javascript
+import React from "react";
+
+export default function BaseButton(props) {
+  return (
+    <button type={props.type} className="base-button">
+      {props.children}
+    </button>
+  );
+}
+```
+
+### 클래스 컴포넌트
+
+클래스 문법을 사용해 컴포넌트를 정의할 수도 있다.  
+함수 컴포넌트와 달리, React의 Component를 확장해 사용해야 한다.
+
+```javascript
+import React from "react";
+
+class BaseButton extends React.Component {
+  constructor(props) {
+    super(props);
+  }
+
+  render() {
+    <button type={this.props.type} className="base-button">
+      {this.props.children}
+    </button>;
+  }
+}
+```
+
+### 컴포넌트 렌더링
+
+컴포넌트는 React 요소로서 렌더링 된다.  
+클래스의 인스턴스를 만드는 것과 같다.  
+React API를 사용할 경우 컴포넌트 참조를 타입으로 설정하고 props 객체를 전달한다.  
+JSX를 사용하면 코드 작성을 보다 쉽게 할 수 있다. 컴포넌트 이름은 파스칼 문법을 사용해야 한다.
+
+### props
+
+JSX 속성은 리액트 컴포넌트에 props 객체로 전달된다.
+
+```javascript
+React.createElement(
+  BaseButton,
+  {
+    type: 'reset'
+    children: [
+      React.createElement(
+        'span',
+        { className: 'icon icon--reset', 'aria-hidden': 'true' }
+      ),
+      React.createElement(
+        'span',
+        { className: 'a11yHidden', children: '초기화' }
+      )
+    ]
+  }
+)
+```
