--- a/_posts/2022-03-01-0228-0306.md
+++ b/_posts/2022-03-01-0228-0306.md
@@ -1215,3 +1215,192 @@ React.createElement(
   }
 )
 ```
+
+<br />
+<br />
+<br />
+
+## 0305
+
+# 타입 넓히기
+
+상수를 사용해서 변수를 초기화할 때 타입을 명시하지 않으면 타입 체커는 타입을 결정해야 한다.  
+지정된 단일 값을 가지고 할당 가능한 값들의 집합을 유추해야 하는데 이러한 과정을 '넓히기'라고 부른다.  
+넓히기의 과정을 이해한다면 오류의 원인을 파악하고 타입 구문을 더 효과적으로 사용할 수 있다.
+
+```typescript
+function getComponent(vector: Vector3, axis: "x" | "y" | "z") {
+  return vector[axis];
+}
+
+let x = "x";
+let vec = { x: 10, y: 10, z: 10 };
+getComponent(vec, x);
+// 'string' 형식의 인수는 '"x" | "y" | "z"' 형식의 매개 변수에 할당될 수 없습니다.
+```
+
+- x의 타입은 할당 시점에 넓히기가 동작해서 string으로 추론되었다.
+- string 타입은 'x' | 'y' | 'z' 타입에 할당 불가능하므로 오류가 된 것이다.
+- 이와 같이 타입 넓히기가 진행될 때, 주어진 값으로 추론 가능한 타입이 여러 개이기 때문에 과정이 상당히 모호하다.
+
+```typescript
+const mixed = ["x", 1];
+```
+
+- 위의 코드 역시 상당히 많은 타입으로 추론될 수 있지만 이 경우에는 `(string | number)[]`으로 추측한다.
+- 타입스크립트는 타입을 추론할 때 명확성과 유연성 사이의 균형을 유지하려 한다.
+
+## 넓히기 과정 제어 방법
+
+### const
+
+- let 대신 const로 변수를 선언하면 더 좁은 타입이 된다.
+- 변수는 재할당될 수 없으므로 더 좁은 타입으로 추론 가능하다.
+- 다만 객체와 배열의 경우 여전히 문제가 존재한다.
+- 객체의 경우 타입스크립트의 넓히기 알고리즘은 각 요소를 let으로 할당된 것처럼 다룬다.
+  - 덕분에 속성을 재할당할 수 있지만 다른 타입으로 변경은 불가능하다.
+  - 그리고 다른 속성을 추가하지도 못해 객체를 한번에 만들어야 한다.
+
+### 명시적 타입 구문 제공
+
+```typescript
+const v: { x: 1 | 3 | 5 } = {
+  x: 1,
+};
+// 타입이 { x: 1 | 3 | 5; }
+```
+
+### 타입 체커에 추가적인 문맥 제공
+
+예를 들어, 함수의 매개변수로 값을 전달
+
+### const 단언문
+
+- const 단언문은 온전히 타입 공간의 기법으로 변수 선언에 쓰이는 const와는 다르다.
+- 값 뒤에 as const를 작성하면, 타입스크립트는 최대한 좁은 타입으로 추론한다.
+- 배열을 튜플 타입으로 추론할 때에도 as const를 사용할 수 있다.
+- 넓히기로 인해 오류가 발생한다고 생각되면, 명시적 타입 구문 또는 const 단언문을 추가하는 것을 고려해야 한다.
+
+```typescript
+const v1 = {
+  x: 1 as const,
+  y: 2,
+};
+// 타입은 { x: 1; y: number; }
+
+const v2 = {
+  x: 1,
+  y: 2,
+} as const;
+// 타입은 { readonly x: 1; readonly y: 2; }
+```
+
+# 타입 좁히기
+
+타입 넓히기의 반대는 타입 좁히기로 타입 스크립트가 넓은 타입으로부터 좁은 타입으로 진행하는 과정을 말한다.
+
+## 타입 좁히기의 여러 방법
+
+### null 체크
+
+- 분기문으로 null을 제외하면, 더 좁은 타입이 되어 작업이 훨씬 쉬워진다.
+- 분기문에서 예외를 던지거나 함수를 반환하여 블록의 나머지 부분에서 변수의 타입을 좁힐 수도 있다.
+
+### instanceof
+
+```typescript
+function contains(text: string, search: string | RegExp) {
+  if (search instanceof RegExp) {
+    // 타입이 RegExp
+    return !!search.exec(text);
+  }
+  // 타입이 string
+  return text.includes(search);
+}
+```
+
+### 속성 체크
+
+```typescript
+function pickAB(ab: A | B) {
+  if ("a" in ab) {
+    // 타입이 A
+  } else {
+    // 타입이 B
+  }
+  // 타입이 A | B
+}
+```
+
+- `Array.isArray` 같은 일부 내장 함수로도 타입을 좁힐 수 있다.
+
+### 명시적인 태그
+
+```typescript
+interface UploadEvent {
+  type: "upload";
+  filename: string;
+  contents: string;
+}
+
+interface DownloadEvent {
+  type: "download";
+  filename: string;
+}
+
+type AppEvent = UploadEvent | DownloadEvent;
+
+function handleEvent(e: AppEvent) {
+  switch (e.type) {
+    case "download":
+      // 타입이 DownloadEvent
+      break;
+    case "upload":
+      // 타입이 UploadEvent
+      break;
+  }
+}
+```
+
+- 이 패턴은 태그된 유니온 또는 구별된 유니온이라고 불리며, 타입스크립트에서 자주 찾아볼 수 있다.
+
+### 사용자 정의 타입 가드
+
+```typescript
+function isInputElement(el: HTMLElement): el is HTMLInputElement {
+  return "value" in el;
+}
+```
+
+- 반환 타입의 `el is HTMLInputElement `는 함수의 반환이 true인 경우, 타입 체커에게 매개변수의 타입을 좁힐 수 있다고 알려 준다.
+- 타입 가드를 사용해서 배열과 객체의 타입 좁히기를 할 수도 있다.
+  - 배열에서 어떤 탐색을 수행할 때 undefined가 될 수 있는 타입을 사용할 수 있다.
+  - 이 때, filter 함수를 사용해 undefined를 걸러 내려고 해도 잘 동작하지 않는다.
+  - 이럴 때 타입 가드를 사용하면 타입을 좁힐 수 있다.
+
+```typescript
+function isDefined<T>(x: T | undefined): x is T {
+  return x !== undefined;
+}
+```
+
+### 저지르기 쉬운 실수
+
+```typescript
+const el = document.getElementById("foo");
+if (typeof el === "object") {
+  // 타입이 HTMLElement | null
+}
+```
+
+- 자바스크립트에서 `typeof null`이 object이기 때문에, if 구문에서 null이 제외되지 않았다.
+
+```typescript
+function foo(x?: number | string | null) {
+  if (!x) {
+    // 타입이 stirng | number| null | undefined
+  }
+}
+```
+
+- 빈 문자열과 0 모두 false가 되기 때문에, 타입은 전혀 좁혀지지 않았고 x는 여전히 블록 내에서 string 또는 number가 된다.
