--- a/_posts/2022-03-10-0307-0313.md
+++ b/_posts/2022-03-10-0307-0313.md
@@ -154,3 +154,142 @@ async function fetchPages() {
 - async 함수는 항상 프로미스를 반환하도록 강제된다.
 - 함수는 항상 동기 또는 비동기로 실행되어야 하며 절대 혼용해서는 안 된다.
   - async를 사용하면 항상 비동기 코드를 작성하는 셈이 되어 일관적인 동작을 강제하게 된다.
+
+<br />
+<br />
+<br />
+
+## 0308
+
+# 커넥션 관리
+
+## TCP 커넥션
+
+모든 HTTP 통신은 패킷 교환 네트워크 프로토콜들의 계층화된 집합인 TCP/IP를 통해 이루어진다.  
+세계 어디서든 클라이언트 애플리케이션은 서버 애플리케이션으로 TCP/IP 커넥션을 맺을 수 있다.  
+커넥션이 맺어지면 클라이언트와 서버 컴퓨터 간에 주고받는 메시지들은 손실 혹은 손상되거나 순서가 바뀌지 않고 안전하게 전달된다.
+
+URL을 입력받은 브라우저는 다음과 같은 단계로 요청과 응답이 일어난다.
+
+1. 브라우저가 호스트 명을 추출한다.
+2. 브라우저가 호스트 명에 대한 IP 주소와 포트 번호를 얻는다.
+3. 브라주저가 IP의 포트 번호로 TCP 커넥션을 생성한다.
+4. 요청과 응답이 일어난다.
+5. 브라우저가 커넥션을 끊는다.
+
+### 신뢰할 수 있는 데이터 전송 통로인 TCP
+
+- HTTP 커넥션은 몇몇 사용 규칙을 제외하고는 TCP 커넥션에 불과하다.
+- TCP 커넥션은 인터넷을 안정적으로 연결해준다.
+- TCP 커넥션의 한쪽에 있는 바이트들은 반대쪽으로 순서에 맞게 정확히 전달된다.
+
+### TCP 스트림은 세그먼트로 나뉘어 IP 패킷을 통해 전송된다
+
+- TCP는 IP 패킷이라고 불리는 작은 조각을 통해 데이터를 전송한다.
+- HTTP가 메시지를 전송하고자 할 경우, 현재 연결되어 있는 TCP 커넥션을 통해서 메시지 데이터의 내용을 순서대로 보낸다.
+- TCP는 세그먼트라는 단위로 데이터 스트림을 잘게 나누고, 세그먼트를 IP 패킷이라고 불리는 봉투에 담아서 인터넷을 통해 데이터를 전달한다.
+
+IP 패킷은 다음과 같은 정보를 포함한다.
+
+- IP 패킷 헤더(보통 20 바이트)
+- TCP 세그먼트 헤더(보통 20 바이트)
+- TCP 데이터 조각(0 혹은 그 이상의 바이트)
+
+### TCP 커넥션 유지
+
+- 컴퓨터는 항상 TCP 커넥션을 여러 개 가지고 있다. TCP는 포트 번호를 통해서 이런 여러 개의 커넥션을 유지한다.
+- IP 주소는 해당 컴퓨터에 연결되고, 포트 번호는 해당 애플리케이션으로 연결된다.
+- TCP 커넥션은 네 가지 값으로 식별한다.
+  - `<발신지 IP, 발신지 포트, 수신자 IP, 수신자 포트>`
+  - 이는 유일한 값으로 서로 다른 두 개의 TCP 커넥션은 값이 모두 같을 수 없다.
+
+### TCP 소켓 프로그래밍
+
+운영체제는 TCP 커넥션의 생성과 관련된 여러 기능을 제공한다.  
+소켓 API는 유닉스 운영체제용으로 먼저 개발되었지만, 지금의 소켓 API의 다양한 구현체들 덕분에 대부분의 운영체제와 프로그램 언어에서 이를 사용할 수 있게 되었다.  
+소켓 API를 사용하면, TCP 종단 데이터 구조를 생성하고, 원격 서버의 TCP 종단에 그 종단 데이터 구조를 연결하여 데이터 스트림을 읽고 쓸 수 있다.  
+TCP API는, 기본적인 네트워크 프로토콜의 핸드셰이킹, 그리고 TCP 데이터 스트림과 IP 패킷 간의 분할 및 재조립에 대한 모든 세부사항을 외부로부터 숨긴다.
+
+## TCP의 성능에 대한 고려
+
+HTTP는 TCP 바로 위의 계층이기 때문에 HTTP 트랜잭션의 성능은 그 아래 계층인 TCP 성능에 영향을 받는다.  
+이를 이해하려면 TCP 프로토콜 내부를 자세히 알아야 한다.
+
+### HTTP 트랜잭션 지연
+
+클라이언트나 서버가 너무 많은 데이터를 내려받거나 복잡하고 동적인 자원들을 실행하지 않는 한, 대부분의 HTTP 지연은 TCP 네트워크 지연 때문에 발생한다.
+
+**HTTP 트랜잭션을 지연시키는 원인**
+
+1. 클라이언트는 URI에서 웹 서버의 IP 주소와 포트 번호를 알아내야 하는데, URI에 기술되어 있는 호스트에 방문한 적이 최근에 없으면 DNS 이름 분석 인프라를 사용하여 호스트 명을 IP 주소로 변환하는데 시간이 소요된다.
+2. 다음으로, 클라이언트는 TCP 커넥션 요청을 서버에게 보내고 서버가 커넥션 허가 응답을 회신하기를 기다린다. 수백 개의 HTTP 트랜잭션이 만들어지면 소요시간은 크게 증가할 것이다.
+3. 요청 메시지가 인터넷을 통해 전달되고 서버에 의해 처리 후, HTTP 응답을 보내는 데에도 시간이 소요된다.
+
+### 성능 관련 중요 요소
+
+가장 일반적인 TCP 관련 지연
+
+- TCP 커넥션의 핸드셰이크 설정
+- 인터넷의 혼잡을 제어하기 위한 TCP의 느린 시작
+- 데이터를 한데 모아 한 번에 전송하기 위한 네이글 알고리즘
+- TCP의 편승(피기백) 확인응답을 위한 확인응답 지연 알고리즘
+- TIME_WAIT 지연과 포트 고갈
+
+### TCP 커넥션 핸드셰이크 지연
+
+새로운 TCP 커넥션을 열 때면, TCP 소프트웨어는 커넥션을 맺기 위한 조건을 맞추기 위해 연속으로 IP 패킷을 교환한다.  
+작은 크기의 데이터 전송에 커넥션이 사용된다면 이는 HTTP 성능을 저하시킬 수 있다.
+
+**핸드셰이크 과정**
+
+1. 클라이언트는 새로운 TCP 커넥션을 생성하기 위해 작은 TCP 패킷을 서버에게 보낸다. 그 패킷은 SYN이라는 특별한 플래그를 가지는데, 이 요청이 커넥션 생성 요청이라는 뜻이다.
+2. 서버가 커넥션을 받으면 커넥션 요청이 받아들여졌음을 의미하는 SYN과 ACK 플래그를 포함한 TCP 패킷을 클라이언트에게 보낸다.
+3. 마지막으로 클라이언트는 커넥션이 잘 맺어졌음을 알리기 위해 서버에게 확인응답 신호를 보낸다.
+
+즉, 크기가 작은 HTTP 트랜잭션은 50% 이상의 시간을 TCP를 구성하는 데 쓴다.
+
+### 확인 응답 지연
+
+인터넷 자체가 패킷 전송을 완벽히 보장하지 않기 때문에 TCP는 성공적인 데이터 전송을 보장하기 위해 자체적인 확인 체계를 가진다.  
+각 TCP 세그먼트는 순번과 데이터 무결성 체크섬을 가진다. 세그먼트 수신자는 세그먼트를 온전히 받으면 작은 확인응답 패킷을 송신자에게 반환한다. 만약 송신자가 특정 시간 안에 확인응답 메시지를 받지 못하면 패킷이 파기되었거나 오류가 있는 것으로 판단하고 데이터를 다시 전송한다.
+
+확인응답은 크기가 작기 때문에, TCP는 같은 방향으로 송출되는 데이터 패킷에 확인응답을 편승시킨다. TCP는 송출 데이터 패킷과 확인응답을 하나로 묶음으로써 네트워크를 좀 더 효율적으로 사용한다.  
+확인응답이 같은 방향으로 가는 데이터 패킷에 편승되는 경우를 늘리기 위해서, 많은 TCP 스택은 확인 응답 지연 알고리즘을 구현한다. 확인응답 지연은 송출한 확인응답을 특정 시간 동안 버퍼에 저장해 두고, 확인응답을 편승시키기 위한 송출 데이터 패킷을 찾는다. 만약 일정 시간 안에 송출 데이터 패킷을 찾지 못하면 확인응답은 별도 패킷을 만들어 전송된다.
+
+편승한 패킷을 찾으려고 하면 해당 방향으로 송출될 패킷이 많지 않기 때문에, 확인응답 지연 알고리즘으로 인한 지연이 자주 발생한다.  
+운영체제에 따라 다르지만, 지연의 원인이 되는 확인응답 지연 관련 기능을 수정하거나 비활성화할 수 있다.
+
+### TCP 느린 시작
+
+TCP 커넥션은 시간이 지나면서 자체적으로 튜닝되어서, 처음에는 최대 속도를 제한하고 데이터가 성공적으로 전송됨에 따라 속도 제한을 높여나간다. 이렇게 조율하는 것을 TCP 느린 시작이라고 부르며, 인터넷의 급작스러운 부하와 혼잡을 방지하는 데 쓰인다.
+
+- TCP가 한 번에 전송할 수 있는 패킷의 수를 제한한다.
+  - 패킷이 성공적으로 전달되는 각 시점에 송신자는 추가로 2개의 패킷을 더 전송할 수 있는 권한을 얻는다.
+- HTTP 트랜잭션에서 전송할 데이터 양이 많으면 모든 패킷을 한 번에 전송할 수 없다. 한 개의 패킷만 전송하고 확인응답을 받으면 2개의 패킷, 이런식으로 점차 늘려가게 된다. 이를 혼잡 윈도를 연다라고 한다.
+- 이 혼잡제어 기능 때문에, 새로운 커넥션은 이미 어느 정도 데이터를 주고 받은 튜닝된 커넥션보다 느리다.
+
+### 네이글 알고리즘과 TCP_NODELAY
+
+- 네이글 알고리즘은 네트워크 효율을 위해서, 패킷을 전송하기 전에 많은 양의 TCP 데이터를 한 개의 덩어리로 합친다.
+- 세그먼트가 최대 크기(LAN 상에서 1,500 바이트 정도, 인터넷상에서는 수백 바이트 정도다)가 되지 않으면 전송을 하지 않는다.
+- 다만 다른 모든 패킷이 확인응답을 받았을 경우에는 최대 크기보다 작은 패킷의 전송을 허락한다.
+- 다른 패킷들이 아직 전송 중이면 데이터는 버퍼에 저장된다.
+- 전송되고 나서 확인응답을 기다리던 패킷이 확인응답을 받았거나 전송하기 충분할 만큼의 패킷이 쌓였을 때 버퍼에 저장되어 있던 데이터가 전송된다.
+
+네이글 알고리즘은 HTTP 성능 관련해 여러 문제를 발생시킨다.
+
+1. 크기가 작은 HTTP 메시지는 패킷을 채우지 못하기 때문에, 앞으로 생길지 생기지 않을지 모르는 추가적인 데이터를 기다리며 지연된다.
+2. 네이글 알고리즘은 확인응답 지연과 함께 쓰일 경우 형편없이 동작한다. 네이글 알고리즘은 확인 응답이 도착할 때까지 데이터를 멈추고 있는 반면, 확인응답 지연 알고리즘은 확인응답을 100~200밀리초 지연시킨다.
+
+HTTP 애플리케이션은 성능 향상을 위해 HTTP 스택에 TCP_NODELAY 파라미터 값을 설정하여 네이글 알고리즘을 비활성화하기도 한다.  
+이 설정을 하면 작은 크기의 패킷이 너무 많이 생기지 않도록 큰 크기의 데이터 덩어리를 만들어야 한다.
+
+### TIME_WAIT의 누적과 포트 고갈
+
+TCP 커넥션의 종단에서 TCP 커넥션을 끊으면, 종단에서는 커넥션의 IP 주소와 포트 번호를 메모리의 작은 제어영역에 기록해 놓는다.  
+이 정보는 같은 주소와 포트 번호를 사용하는 새로운 TCP 커넥션이 일정 시간 동안에는 생성되지 않게 하기 위한 것으로, 보통 세그먼트의 최대 생명주기의 두 배 정도(2MSL이라 불리며 보통 2분 정도)의 시간 동안만 유지된다.  
+실제로 이 알고리즘은 특정 커넥션이 생성되고 닫힌 다음, 그와 같은 IP 주소와 포트 번호를 가지는 커넥션이 2분 이내에 또 생성되는 것을 막아준다.
+
+일반적으로 2MSL의 커넥션 종료 지연이 문제가 되지는 않지만, 성능시험을 하는 상황에서는 문제가 될 수 있다.  
+성능 측정 대상 서버는 클라이언트가 접속할 수 있는 IP 주소의 개수를 제한하고, 그 서버에 접속하여 부하를 발생시킬 컴퓨터의 수는 적기 때문이다.  
+TIME_WAIT로 인해 순간순간 포트를 재활용하는 것이 불가능해지고, 유일한 커넥션을 생성하기 위해 발신지 포트만 변경할 수 있으므로 포트 고갈이 발생한다.
