--- a/_posts/2022-03-10-0307-0313.md
+++ b/_posts/2022-03-10-0307-0313.md
@@ -293,3 +293,48 @@ TCP 커넥션의 종단에서 TCP 커넥션을 끊으면, 종단에서는 커넥
 일반적으로 2MSL의 커넥션 종료 지연이 문제가 되지는 않지만, 성능시험을 하는 상황에서는 문제가 될 수 있다.  
 성능 측정 대상 서버는 클라이언트가 접속할 수 있는 IP 주소의 개수를 제한하고, 그 서버에 접속하여 부하를 발생시킬 컴퓨터의 수는 적기 때문이다.  
 TIME_WAIT로 인해 순간순간 포트를 재활용하는 것이 불가능해지고, 유일한 커넥션을 생성하기 위해 발신지 포트만 변경할 수 있으므로 포트 고갈이 발생한다.
+
+<br />
+<br />
+<br />
+
+## 0309
+
+# OSI 7 계층
+
+이전에 공부했던 핵심 cs 개념들을 위주로 복습하고자 정리하게 되었다.
+
+웹사이트에서 원하는 정보를 얻기 위해 웹브라우저에 주소를 쳐서 들어갈 때, 인터넷이 연결된 환경에서 주소를 입력하면 총 7단계를 걸쳐 해당 정보가 있는 지점에 도달하게 된다.
+이 각각의 계층을 OSI 7계층이라고 한다.
+
+## 1계층 - Physical Layer
+
+- 0과 1의나열을 아날로그 신호로 바꾸어 전선을 흘려 보내고(인코딩), 아날로그 신호가 들어오면 0과 1의 나열로 해석하여(디코딩) 물리적으로 연결된 두 대의컴퓨터가 0과 1의 나열을 주고받을 수 있게 해주는 모듈
+- 1계층 모듈은 하드웨어적으로 구현되어 있다.
+
+## 2계층 - Data Link Layer
+
+1계층에 속하는 기술만으로는 여러 대의 컴퓨터가 통신할 수 없다.  
+전 세계의 컴퓨터들을 연결한 것을 인터넷이라고 한다.
+
+- 같은 네트워크에 있는 여러 대의 컴퓨터들이 데이터를 주고받기 위해 필요한 모듈
+- Framing은 Data-link Layer에 속하는 작업들 중 하나이다.
+  - Framing - 0과 1로 이루어진 데이터를 끊어 읽기 위해 데이터의 앞 뒤에 특정한 비트열을 붙이는 작업
+- LAN 카드에 이와 같은 기술이 구현되어 있다. 1계층과 마찬가지로 하드웨어적으로 구현.
+
+## 3계층 - Network Layer
+
+- 수많은 네트워크들의 연결로 이루어지는 inter-network 속에서 어딘가에 있는 목적지 컴퓨터로 데이터를 전송하기 위해 IP 주소를 이용해서 길을 찾고(라우팅) 자신 다음의 라우터에게 데이터를 넘겨주는 것
+- 운영체제의 커널에 소프트웨어적으로 구현되어 있다.
+
+## 4계층 - Transport Layer
+
+- 포트 번호를 사용해서 도착지 컴퓨터의 최종 도착지인 프로세스에까지 데이터가 도달하게 하는 모듈
+- 운영체제의 커널에 소프트웨어적으로 구현되어 있다.
+
+## 5계층 - Application Layer
+
+현대의 인터넷은 기존 OSI Layer 7 Model이 아닌 TCP/IP 모델을 따르고 있다.  
+이에 따라 기존 Application, Presentation, Session Layer들은 Application Layer하나로 합쳐지게 되었다.
+
+대표적인 프로토콜로는 HTTP가 존재한다.
