--- a/_posts/2022-03-10-0307-0313.md
+++ b/_posts/2022-03-10-0307-0313.md
@@ -644,3 +644,90 @@ callWithRandomNumbers(fn);
 
 - 타입스크립트의 많은 부분이 자바스크립트 라이브러리의 동작을 정확히 모델링하기 위해서 개발되었다. 그러므로 이를 적극 활용하자
 - 타입 흐름을 개선하고, 가독성을 높이고, 명시적인 타입 구문의 필요성을 줄이기 위해 직접 구현하기보다는 내장된 함수형 기법과 로대시 같은 유틸리티 라이브러리를 사용하는 것이 좋다.
+
+<br />
+<br />
+<br />
+
+## 0312
+
+# 유효한 상태만 표현하는 타입 지향
+
+효과적으로 타입을 설계하려면, 유효한 상태만 표현할 수 있는 타입을 만들어 내는 것이 가장 중요하다.  
+웹 애플리케이션을 만든다고 가정해보자. 애플리케이션에서 페이지를 선택하면, 페이지의 내용을 로드하고 화면에 표시한다.
+
+```typescript
+interface State {
+  pageText: string;
+  isLoading: boolean;
+  error?: string;
+}
+
+function renderPage(state: State) {
+  if (state.error) {
+    return `Error! Unable to load ${currentPage}: ${state.error}`;
+  } else if (state.isLoading) {
+    return `Loading...`;
+  }
+  return `<h1>${currentPage}</h1>\n${state.pageText}`;
+}
+```
+
+- 코드를 살펴보면 분기 조건이 명확히 분리되어 있지 않다.
+- isLoading이 true이고 동시에 error 값이 존재하면 로딩 중인 상태인지 오류가 발생한 상태인지 명확히 구분할 수 없다.
+- State 타입은 이와 같이 무효한 상태를 허용하여 코드를 제대로 구현할 수 없게 된다.
+
+```typescript
+interface RequestPending {
+  state: "pending";
+}
+
+interface RequestError {
+  state: "error";
+  error: string;
+}
+
+interface RequestSuccess {
+  state: "ok";
+  pageText: string;
+}
+
+type RequestState = RequestPending | RequestError | RequestSuccess;
+
+interface State {
+  currentPage: string;
+  requests: { [page: string]: RequestState };
+}
+
+function renderPage(state: State) {
+  const { currentPage } = state;
+  const requestState = state.requests[currentPage];
+
+  switch (requestState.state) {
+    case "pending":
+      return `Loading...`;
+    case "error":
+      return `Error! Unable to load ${currentPage}: ${requestState.error}`;
+    case "ok":
+      return `<h1>${currentPage}</h1>\n${requestState.pageText}`;
+  }
+}
+```
+
+- 여기서는 네트워크 요청 과정 각각의 상태를 명시적으로 모델링하는 태그된 유니온이 사용되었다.
+- 타입 코드 길이가 길어지긴 했지만, 무효한 상태를 허용하지 않도록 크게 개선되었다.
+- 함수의 모호함은 사라지고, 현재 페이지가 무엇인지 명확하며, 모든 요청은 정확히 하나의 상태로 맞아 떨어진다.
+- 이처럼 유효한 상태만 표현하는 타입을 지향해야 한다. 유효한 상태와 무효한 상태를 둘 다 표현하는 타입은 혼란을 초래하기 쉽고 오류를 유발하게 된다.
+
+# 사용할 때는 너그럽게, 생성할 때는 엄격하게
+
+- 함수의 매개변수는 타입의 범위가 넓어도 되지만, 결과를 반환할 때는 일반적으로 타입의 범위가 더 구체적이어야 한다.
+- 보통 매개변수 타입은 반환 타입에 비해 범위가 넓은 경향이 있다. 선택적 속성과 유니온 타입은 반환 타입보다 매개변수 타입에 더 일반적이다.
+- 매개변수와 반환 타입의 재사용을 위해서 기본 형태(반환 타입)와 느슨한 형태(매개변수 타입)를 도입하는 것이 좋다.
+
+# 문서에 타입 정보를 쓰지 않기
+
+- 누군가 강제하지 않는 이상 주석과 코드는 동기화 되지 않는다. 그러나 타입 구문은 타입스크립트 타입 체커가 타입 정보를 동기화하도록 강제하니 주석과 변수명에 타입 정보를 적는 것은 피하자
+- 값을 변경하지 않는다고 설명하는 주석도 좋지 않다. readonly를 사용하면 된다.
+- 타입이 명확하지 않은 경우는 변수명에 단위 정보를 포함하는 것을 고려하는 것이 좋다.
+  - ex) timeMs 또는 temperatureC
