--- a/_posts/2022-03-16-0314-0320.md
+++ b/_posts/2022-03-16-0314-0320.md
@@ -245,3 +245,494 @@ function pluck<T, K extends keyof T>(records: T[], key: K): T[K][] {
 - 데이터에 드러나지 않는 예외적인 경우들이 문제가 될 수 있기 때문에 데이터보다는 명세로부터 코드를 생성하는 것이 좋다.
 - 명세를 기반으로 타입을 작성한다면 현재까지 경험한 데이터뿐만 아니라 사용 가능한 모든 값에 대해서 작동한다는 확신을 가질 수 있다.
 - API의 명세로부터 타입을 생성할 수 있다면 그렇게 하는 것이 좋다. 특히 GraphQL처럼 자체적으로 타입이 정의된 API에서 잘 동작한다.
+
+<br />
+<br />
+<br />
+
+## 0315
+
+# styled-components
+
+CSS 스타일을 추상화 한 javascript 객체 대신, CSS 스타일 문법을 그대로 사용할 수 있는 React 스타일 컴포넌트로 활용할 수 있다.  
+React 컴포넌트 시스템에서 CSS 스타일링을 효율적으로 작성화기 위한 방법
+
+## 장점
+
+- 손쉬운 유지 보수
+  - 컴포넌트에 영향을 미치는 스타일을 찾기 위해 여러 파일을 검색 할 필요가 없으므로 코드 베이스의 크기와 관계없이 유지 보수가 용이
+- 고유한 CSS 클래스 생성
+  - 스타일 컴포넌트를 추적해 CSS로 작성된 백틱 스타일을 고유한 CSS 클래스 이름으로 변경한다.
+  - 스타일 컴포넌트에 의해 자동 생성된 고유 CSS 클래스 이름은 `sc-` 접두사로 시작된다.
+- 벤더 프리픽스 자동 설정
+  - CSS 표준 문법만 사용하면 자동으로 처리한다.
+- 동적 스타일링
+  - props 또는 theme 속성을 사용해 컴포넌트 외부에서 스타일을 관리하는 것은, 수십 개의 CSS 클래스를 손수 관리할 필요가 없다.
+  - 컴포넌트 외부에서 손쉽게 동적으로 스타일을 관리할 수 있다.
+
+## 설치
+
+`npm i styled-components`
+
+## 사용법
+
+React 프로젝트에서 styled-components 모듈에서 styled를 불러온 후, HTML 표준 컴포넌트 이름을 추가한 다음 백틱 기호로 감싼 영역에 CSS 코드를 작성하면 CSS 스타일이 반영된 React 컴포넌트를 만들어 낼 수 있다.
+
+```jsx
+import styled from "styled-components";
+
+export const SectionHeader = styled.h2`
+  color: #06f;
+  font-size: 1.45rem;
+`;
+
+// 위의 코드와 같음
+export const SectionHeader = styled("h2")`
+  color: #06f;
+  font-size: 1.45rem;
+`;
+```
+
+### props 설정
+
+React 컴포넌트는 요소로 사용될 때 속성을 전달 받고, props 속성으로 전달 받은 속성에 접근이 가능하다.  
+Styled 컴포넌트 또한 props 속성을 인터폴레이션 내부에 설정된 함수를 통해 처리할 수 있다.
+
+```jsx
+import styled from "styled-components";
+
+const Button = styled.button`
+  color: ${(props) => (props.reject ? "#f60" : "#06f")};
+`;
+
+export const StyleTest = () => {
+  return (
+    <div>
+      <Button>승인</Button>
+      <Button reject>거절</Button>
+    </div>
+  );
+};
+```
+
+### 스타일 확장
+
+styled 함수에 스타일드 컴포넌트를 사용해 정의된 컴포넌트를 전달하면 컴포넌트 스타일을 확장할 수 있다.  
+Button 컴포넌트 스타일을 확장한 FillButton 컴포넌트 스타일을 만들어보자
+
+```jsx
+const Button = styled.button`
+  color: ${(props) => (props.reject ? "#f60" : "#06f")};
+`;
+
+const FillButton = styled(Button)`
+  border: 0;
+  padding: 0.45em 0.95em 0.6em;
+  background-color: ${(props) => (props.reject ? "#026" : "#06f")};
+  color: ${(props) => (props.reject ? "#09f" : "#fff")};
+  font-weight: 600;
+`;
+```
+
+이렇게 스타일을 확장한 경우 기존 스타일이 중첩되게 되면 덮어써지게 된다.
+
+### React 컴포넌트 스타일 확장
+
+일반 React 컴포넌트 또한 스타일 확장이 가능하다.  
+className 속성을 전달 받도록 설정해야 스타일 확장이 적용된다.
+
+```jsx
+// 이와 같이 className 속성 전달 받도록 설정
+const Link = ({ className, to, mode, label, children }) => {
+  return (
+    <a href={to} className={className}>
+      {children}
+    </a>
+  );
+};
+
+// props 사용 시, 디스트럭처링 문법 사용 가능
+const IndicatorLink = styled(Link)`
+  padding: 0.8em;
+  font: 16px/1 Verdana;
+  border-radius: ${(props) => props.radius ?? 0};
+  border: ${({ border }) => border ?? "3px solid #06f"};
+  color: ${({ primary }) => primary ?? "#06f"};
+`;
+
+// React 컴포넌트 스타일 확장한 컴포넌트 사용 예시
+export const StyleTest = () => {
+  return (
+    <IndicatorLink
+      to="https://www.naver.com"
+      radius="10px"
+      border="6px double hsla(220, 99%, 50%, 0.68)"
+    >
+      hihi
+    </IndicatorLink>
+  );
+};
+```
+
+### 스타일 래퍼
+
+컴포넌트, 스타일 컴포넌트를 구분하지 않고 내부에 스타일 컴포넌트를 정의하는 것이 관리하기 편하다.
+
+```jsx
+// 스타일 컴포넌트
+const Container = styled.div`
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font: 14px/1 Verdana;
+  color: ${({ primary }) => primary ?? "hsla(220, 99%, 50%, 0.89)"};
+`;
+
+// 컴포넌트
+export const Counter = ({ primary, children }) => (
+  <Container primary={primary}>{children}</Container>
+);
+```
+
+- 컴포넌트 내부에 포함한 스타일 컴포넌트가 많아질 경우, 별도 파일로 분리 관리하는 것이 좋다.
+
+다만, 아래와 같이 컴포넌트 내부에 스타일 컴포넌트를 정의해 사용하면 컴포넌트를 렌더링 할 때마다 스타일 컴포넌트를 다시 정의하므로 애플리케이션 속도에 큰 영향을 미친다. 이처럼 사용하면 안 된다.
+
+```jsx
+export const Counter = ({ primary, children }) => {
+  const Container = styled.div`
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font: 14px/1 Verdana;
+    color: ${({ primary }) => primary ?? "hsla(220, 99%, 50%, 0.89)"};
+  `;
+
+  return <Container primary={primary}>{children}</Container>;
+};
+```
+
+### 중첩 규칙
+
+styled-components는 Sass처럼 중첩 규칙, 가상 클래스/요소를 지원한다.
+
+```jsx
+const Container = styled.div`
+  border: 1px solid black;
+
+  output {
+    user-select: none;
+    font-size: 40px;
+  }
+`;
+
+// 컴포넌트
+export const Counter = () => (
+  <Container>
+    <output>9</output>
+  </Container>
+);
+```
+
+### 가상 클래스
+
+스타일드 컴포넌트의 CSS 코드 안에 가상 클래스를 설정하면 스타일이 적용된다.
+
+```jsx
+// 스타일 컴포넌트
+const ControlButton = styled.button`
+  &:hover,
+  &:focus {
+    color: #036;
+    font-weight: 400;
+  }
+`;
+
+// 컴포넌트
+export const Counter = () => <ControlButton>button</ControlButton>;
+```
+
+### 가상 요소
+
+CSS 코드 안에 가상 요소를 설정하면 스타일이 적용된다.
+
+```jsx
+const ControlButton = styled.button`
+  &.increase {
+    &::before {
+      content: "📤";
+    }
+  }
+`;
+
+export const Counter = () => (
+  <ControlButton className="increase">button</ControlButton>
+);
+```
+
+`&.increase::before` 가상 요소는 `<Counterbutton className="increase">` 내부에 생성된다.
+
+### 추가 props 첨부
+
+styled-components의 attrs 생성자를 사용하면 정적, 동적 props를 정의할 수 있다.  
+이 방법을 활용하면 CSS 속성 값이 javascript 식을 장황하게 나열하지 않고, 한 곳에서 깔끔하게 관리할 수 있다.
+
+```jsx
+const AppInput = styled.input.attrs(({ size, primary }) => ({
+  // 정적 props
+  type: "text",
+  className: "appInput",
+
+  // 동적 props 정의
+  color: primary ?? "#06f",
+  margin: size ?? "1em",
+  padding: size ?? "1em",
+}))`
+  border: 2px solid ${({ color }) => color};
+  border-radius: 3px;
+  margin: ${({ margin }) => margin};
+  padding: ${({ padding }) => padding};
+  color: ${({ color }) => color};
+  font-size: 1em;
+
+  ::placeholder {
+    color: ${({ color }) => color};
+  }
+`;
+
+export const Counter = () => (
+  <div>
+    <AppInput
+      type="email"
+      size="0.2em"
+      aria-label="이메일"
+      placeholder="E-Mail"
+    />
+    <AppInput
+      type="password"
+      size="0.8em"
+      primary="#3bb98f"
+      aria-label="비밀번호"
+      placeholder="password"
+    />
+  </div>
+);
+```
+
+### 스타일 믹스인
+
+믹스인 패턴은 합성 방식으로 styled-components의 css() 유틸리티 함수를 사용하면 스타일 코드를 믹스인 할 수 있다.  
+스타일 중 중복되는 코드가 존재할 때 유용하게 사용할 수 있다.
+
+```jsx
+// CSS 믹스인
+const boxMixin = css`
+  margin: 20px 10px;
+  border: 0;
+  padding: 1em;
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 1.7;
+  color: #fff;
+`;
+
+// Box 컴포넌트 ⬅ CSS 믹스인
+const Box = styled.div`
+  ${boxMixin};
+  background: #07f;
+`;
+
+// ShadowBox 컴포넌트 ⬅ CSS 믹스인
+const ShadowBox = styled.div`
+  ${boxMixin};
+  background: #41b883;
+  box-shadow: 0 6px 8px 1px rgba(0, 100, 30, 0.35);
+`;
+```
+
+### CSS prop
+
+약간의 스타일 구성을 위해 Styled 컴포넌트를 만ㄷ르고 싶지 않은 경우 css prop을 사용하면 손쉽게 요소에 스타일 적용이 가능하다.  
+이 기능을 사용하려면 Babel 플러그인 설치 및 활성화가 필요하다.
+
+```jsx
+import "styled-components/macro";
+
+<Button css="padding: 0.5em 1em;" />;
+```
+
+Babel 플러그인은 위 코드를 아래 코드처럼 컴파일 한다.
+
+```jsx
+import styled from "styled-components";
+
+const StyledButton = styled(Button)`
+  padding: 0.5em 1em;
+`;
+
+<StyledButton />;
+```
+
+### CSS 애니메이션
+
+@keyframes는 컴포넌트 범위 내에서 설정할 수 없다.  
+styled-components의 keyframes 모듈을 사용해 애니메이션을 적용할 수 있다.
+
+```jsx
+import styled, { keyframes } from "styled-components";
+
+const rotateKeyframes = keyframes`
+  0%   { transform: translateY(0) }
+  25%  { transform: translateY(-20px) rotate(20deg) }
+  50%  { transform: translateY(10px) }
+  75%  { transform: translateY(-15px) rotate(-20deg) }
+  100% { transform: translateY(0) }
+`;
+
+// 마법 모자 animation 속성에 rotate 값 설정
+const MagicHat = styled.div`
+  font-size: 100px;
+  animation: ${rotateKeyframes} 3s infinite cubic-bezier(0.35, 0.29, 0.4, 0.8);
+`;
+```
+
+### 글로벌 스타일
+
+createGlobalStyle() 함수는 글로벌 스타일을 정의하는 컴포넌트를 반환한다.  
+글로벌 스타일 컴포넌트 또한 속성을 전달 받아 내부에서 코드를 처리할 수 있다.
+
+```jsx
+import { createGlobalStyle } from "styled-components";
+
+const GlobalStyle = createGlobalStyle`
+  body {
+    margin: 0;
+    font: 1rem/1.5 "Spoqa Han Sans", Sans-Serif;
+    background: ${({ darken }) => (darken ? "#162442" : "#dee1e6")};
+    color: ${({ darken }) => (darken ? "#dee1e6" : "#162442")};
+  }
+  a img {
+    border: 0;
+  }
+`;
+```
+
+### 애플리케이션 테마
+
+애플리케이션에 사용된 모든 컴포넌트의 스타일을 일괄적으로 변경하려면 '테마'를 활용한다.  
+컴포넌트를 작성하고 외부에서 전달한 theme prop에 따라 테마를 변경할 수 있도록 설정한다.  
+전달된 theme 속성이 없을 경우, props 기본 값을 attires 생성자로 설정하거나, defaultProps로 설정한다.
+
+```jsx
+import styled from "styled-components";
+
+const AppButton = styled.button.attrs(({ theme }) => ({
+  theme: "main" in theme ? theme : { main: "#06f" },
+}))`
+  margin: 0.1em;
+  border-radius: 3px;
+  border: 2px solid currentColor;
+  padding: 0.25em 1em;
+  font-size: 1em;
+  color: ${({ theme }) => theme.main};
+`;
+
+<AppButton>기본 테마 버튼</AppButton>
+<AppButton theme={{ main: '#25c892' }}>사용자 정의 테마 버튼</AppButton>
+```
+
+ThemeProvider 컴포넌트를 사용해 일괄적인 테마를 제공할 수 있다.  
+즉, 렌더 트리 안에 존재하는 모든 스타일 컴포넌트는 테마에 접근이 가능하다.
+
+```jsx
+// theme/theme.js - 테마를 관리 할 파일
+export const defaultTheme = {
+  color: {
+    primaryGreen: "#529715",
+    primaryOrange: "#e56a18",
+    badgePink: "#d51754",
+    badgePurple: "#910087",
+    badgeGreen: "#349a2c",
+    badgeNavy: "#4b5aab",
+    heartPink: "#ff9d9d",
+    black: "#000000",
+    white: "#ffffff",
+
+    backgroundGray: "#fafafa",
+    searchGray: "#ebebeb",
+    menuBg: "#252525",
+
+    gray100: "#d8d8d8",
+    gray200: "#b0b0b0",
+    gray300: "#898989",
+    gray400: "#616161",
+    gray500: "#3a3a3a",
+    gray600: "#2e2e2e",
+    gray700: "#232323",
+    gray800: "#171717",
+    gray900: "#0c0c0c",
+  },
+};
+
+// index.js
+import { ThemeProvider } from "styled-components";
+import { defaultTheme } from "./theme/theme";
+
+render(
+  <StrictMode>
+    <ThemeProvider theme={defaultTheme}>
+      <Child />
+    </ThemeProvider>
+  </StrictMode>,
+  document.getElementById("root")
+);
+```
+
+- 테마 파일과 ThemeProvider 컴포넌트를 불러온 후, ThemeProvider 컴포넌트에 theme 속성을 추가한 다음 테마 모드를 설정한다.
+- ThemeProvider 컴포넌트에 전달 된 theme은 포함된 모든 컴포넌트와 공유되어 일괄적인 스타일링이 이루어진다.
+- ThemeProvider 컴포넌트는 theme 속성 전달이 꼭 필요하다.
+- ThemeProvider는 렌더링 될 때 하나 이상의 자식 컴포넌트를 반환하기 때문에 단 하나의 자식 요소만 가져야 한다.
+
+### 테마 함수
+
+theme 속성 값으로 함수를 전달할 수도 있다. 이 함수는 부모의 theme 속성 값을 전달 받는다.  
+예를 들어, 테마 반전같은 기능에서 사용할 수 있다.
+
+```jsx
+const invertTheme = ({ fgColor, bgColor }) => ({
+  fgColor: bgColor,
+  bgColor: fgColor,
+});
+
+<ThemeProvider theme={theme.darkTheme}>
+  <AppButton theme={invertTheme}>테마 반전</AppButton>
+</ThemeProvider>;
+```
+
+### 일반 컴포넌트에 테마 적용
+
+스타일 컴포넌트가 아닌 일반 React 컴포넌트에 테마를 사용해야 하는 경우, withTheme 고차 컴포넌트를 활용할 수 있다.
+
+```jsx
+import React from "react";
+
+// withTheme 고차 컴포넌트 불러오기
+import { withTheme } from "styled-components";
+
+class AppInput extends React.Component {
+  componentDidMount() {
+    // withTheme 고차 컴포넌트를 사용하면
+    // 상위 영역에 설정된 테마를 전달 받습니다.
+    console.log(this.props.theme);
+  }
+  render() {
+    return <input />;
+  }
+}
+
+// withTheme 고차 함수에 AppInput 컴포넌트를 전달하여 내보내기
+export default withTheme(AppInput);
+```
+
+- AppInput 컴포넌트는 스타일 컴포넌트는 아니지만, withTheme()로 감싸져 있어 ThemeProvider 컴포넌트의 theme 속성을 전달 받는다.
+- 전달 받은 theme을 사용하면 일반 컴포넌트에도 스타일을 적용할 수 있다.
