--- a/_posts/2022-03-23-0321-0327.md
+++ b/_posts/2022-03-23-0321-0327.md
@@ -344,3 +344,144 @@ HTTP 프락시 서버는 웹 서버이기도 하고 웹 클라이언트이기도
 - 브라우저 기본 설정 - 브라우저를 소비자에게 전달하기 전에 프락시를 미리 설정해 놓을 수 있다.
 - 프락시 자동 설정(PAC) - JS 프락시 자동 설정 파일에 대한 URI를 제공할 수 있다. 자바스크립트 파일을 가져와서 실행한다.
 - WPAD 프락시 발견 - 대부분의 브라우저는 자동설정 파일을 다운받을 수 있는 설정 서버를 자동으로 찾아주는, 웹 프락시 자동발견 프로토콜을 제공한다.
+
+<br />
+<br />
+<br />
+
+## 0323
+
+## 프락시 요청의 미묘한 특징들
+
+### 프락시 URI는 서버 URI와 다르다
+
+클라이언트가 프락시 대신 서버로 요청을 보내면 요청의 URI가 달라진다.  
+클라이언트가 웹 서버로 요청을 보낼 때, 요청줄은 스킴, 호스트, 포트번호가 없는 부분 URI를 가지는 반면, 프락시로 요청을 보낼 때 요청줄은 완전한 URI를 갖는다.
+
+### 가상 호스팅에서 일어나는 문제
+
+가상으로 호스팅 되는 웹 서버는 여러 웹 사이트가 같은 물리적 웹 서버를 공유한다. 요청 하나가 부분 URI로 오면, 가상으로 호스팅 되는 웹 서버는 그 요청이 접근하고자 하는 웹 사이트의 호스트 명을 알 필요가 있다.  
+이는 프락시와 비슷한 문제이지만, 각각 다른 방법으로 해결되었다.
+
+- 명시적인 프락시는 요청 메시지가 완전한 URI를 갖도록 함으로써 이 문제를 해결했다.
+- 가상으로 호스팅 되는 웹 서버는 호스트와 포트에 대한 정보가 담겨 있는 Host 헤더를 요구한다.
+
+### 인터셉트 프락시는 부분 URI를 받는다
+
+클라이언트가 프락시를 사용한다고 설정되어 있지 않더라도, 클라이언트의 트래픽은 대리 프락시나 인터셉트 프락시를 지날 수 있다.  
+두 가지 겅우 모두, 클라이언트는 자신이 웹 서버와 대화하고 있다고 생각하고 부분 URI를 보내서 문제가 발생할 수 있다.
+
+- 대리 프락시는 원 서버의 호스트 명과 아이피 주소를 사용해 원 서버를 대신하는 프락시 서버이다.
+- 인터셉트 프락시는 네트워크 흐름에서 클라이언트에서 서버로 가는 트래픽을 가로채 캐시된 응답을 돌려주는 일을 하는 프락시 서버다.
+
+### 프락시는 프락시 요청과 서버 요청을 모두 다룰 수 있다
+
+트래픽이 프락시 서버로 리다이렉트 될 수 있는 여러 가지 방법이 존재하기 때문에, 다목적 프락시 서버는 요청 메시지의 완전한 URI와 부분 URI를 모두 지원해야 한다.  
+프락시는 명시적인 프락시 요청에 대해서는 완전한 URI를 사용하고 아니면 부분 URI를 사용해야 하며, 웹 서버 요청의 경우에는 가상 Host 헤더를 사용해야 한다.
+
+- 완전한 URI가 주어졌다면, 프락시는 이를 사용한다.
+- 부분 URI가 주어졌고, Host 헤더가 있다면, Host 헤더를 이용해 원 서버 이름과 포트 번호를 알아내야 한다.
+- 부분 URI가 주어졌으나 Host 헤더가 없다면, 다음 방법으로 원 서버를 알아내야 한다.
+  - 프락시가 대리 프락시라면, 프락시에 실제 서버의 주소와 호트 번호가 설정되어 있을 수 있다.
+  - 이전에 어떤 인터셉트 프락시가 가로챘던 트래픽을 받았고, 그 인터셉트 프락시가 원 IP 주소와 포트번호를 사용할 수 있도록 해두었다면, 그 IP 주소와 포트번호를 사용할 수 있다.
+  - 모두 실패했다면, 반드시 에러 메시지를 반환해야 한다.
+
+### 전송 중 URI 변경
+
+프락시 서버는 요청 URI 변경에 매우 신경을 써야 한다. 사소한 URI 변경이라도 다운스트림 서버와 상호운용성 문제를 일으킬 수 있다.  
+프락시 서버는 가능한 한 관대하도록 해야 한다. 프로토콜을 엄격하게 준수하도록 강제한다면 기존에 잘 동작하던 기능들을 망가뜨리는 결과를 수반할 수 있기 때문이다.  
+특히 HTTP 명세는 일반적으로 인터셉트 프락시가 URI를 전달할 때 절대 경로를 고쳐 쓰는 것을 금지한다. 유일한 예외는 빈 경로를 '/'로 교체하는 것 뿐이다.
+
+### URI 클라이언트 자동확장과 호스트 명 분석
+
+브라우저는 프락시의 존재 여부에 따라 요청 URI를 다르게 분석한다.  
+프락시가 없다면 타이핑한 URI를 가지고 그에 대응하는 IP 주소를 찾는다. 만약 호스트명이 발견되면 그에 대응하는 IP 주소들을 연결에 성공할 때까지 시도해본다.  
+그러나 호스트가 발견되지 않는다면, 많은 브라우저들은 사용자가 호스트 명의 짧은 약어를 타이핑한 것으로 보고 자동화된 호스트 명의 확장을 제공하고자 다음과 같이 몇 가지 시도를 한다.
+
+- `www.` 접두사를 붙이고 `.com` 접미사를 붙인다.
+- 심지어 몇몇 브라우저는 해석할 수 없는 URI를 서드파티 사이트로 넘기기도 하는데, 이 사이트는 오타 교정을 시도하고 사용자가 의도했을 URI를 제시한다.
+- 이뿐만 아니라, 대부분의 시스템에서 DNS는 사용자가 호스트 명의 앞부분만 입력하면 자동으로 도메인을 검색하도록 설정되어 있다.
+
+### 프락시 없는 URI 분석
+
+1. 사용자는 oreilly를 브라우저의 URI 창에 입력했다. 브라우저는 이를 호스트 명으로 사용하고 기본 스킴을 `http://`로, 기본 포트를 80으로, 기본 경로를 '/'로 간주한다.
+2. 브라우저는 호스트 oreilly를 찾아본다. 이것은 실패한다.
+3. 브라우저는 호스트 명을 자동으로 확장한 후 DNS에 '`www.oreilly.com`'의 주소 분해를 요청한다. 이것은 성공해서 IP 주소를 돌려받아 요청과 응답을 주고 받는다.
+
+### 명시적인 프락시를 사용할 때의 URI 분석
+
+명시적인 프락시를 사용한다면, 브라우저는 이와 같은 편리한 확장들 중 어느 것도 수행할 수 없다. 브라우저의 URI가 프락시를 그냥 지나쳐버리기 때문이다.  
+브라우저는 명시적인 프락시가 있는 경우 부분 호스트 명을 자동확장하지 않는다.
+
+1. 사용자는 oreilly를 브라우저의 URI 창에 입력했다.
+2. 프락시 명시적으로 설정되었으므로, 브라우저는 DNS를 사용해 프락시 서버를 찾고, IP 주소를 얻는다.
+3. 브라우저는 프락시에 접속하고자 시도하고, 커넥션을 맺는다.
+4. 브라우저가 HTTP 요청을 보낼 때 클라이언트가 자동확장을 하지 않았기 때문에, 프락시는 요청에서 부분 호스트 명을 얻는다.
+
+이러한 이유로, 몇몇 프락시는 'www...com' 자동확장이나 지역 도메인 접미사 추가와 같은 브라우저의 편리한 서비스를 할 수 있다면 최대한 흉내 내려고 시도한다.
+
+### 인터셉트 프락시를 이용한 URI 분석
+
+호스트 명 분석은 인터셉트 프락시와 함께일 때 약간 달라지는데, 클라이언트 입장에서 프락시는 존재하지 않는 것이기 때문이다.  
+DNS가 성공할 때까지 호스트 명을 자동확장하는 브라우저를 사용할 때의 동작은 프락시가 아닌 서버의 경우와 별 차이가 없다.  
+그러나 서버로의 커넥션이 만들어졌을 때는 차이가 발생한다.
+
+1.  DNS가 성공할 때까지 호스트 명을 자동확장하는 브라우저를 사용할 때의 동작은 프락시가 아닌 서버의 경우와 동일
+2.  클라이언트는 성공적으로 호스트 명을 분석하였고, IP 주소의 목록을 갖고 있다. 일반적으로, 클라이언트는 성공할 때까지 모든 IP 주소에 대해 접속을 시도하지만, 어떤 IP 주소들은 죽은 것일 수 있다. 그러나 인터셉트 프락시와 함께라면, 첫 번째 접속 시도는 원 서버가 아닌 프락시 서버에 의해 종료된다. 클라이언트는 성공적으로 웹 서버와 대화했다고 믿지만, 웹 서버는 살아있지도 않을 것이다.
+3.  프락시가 최종적으로 원 서버와 상호작용할 준비가 되었을 때, 프락시는 그 IP 주소가 실제로 다운된 서버를 가리키고 있음을 알게 될 것이다. 브라우저에서 제공하는 것과 동등한 수준의 장애 허용을 제공하기 위해서, 프락시는 호스트 헤더에 들어 있는 호스트 명을 다시 분석하든 아니면 IP 주소에 대한 역방향 DNS 룩업을 해서든 다른 IP 주소를 시도해야 한다.
+
+## 메시지 추적
+
+프락시가 점점 더 흔해지면서, 서로 다른 스위치와 라우터를 넘나드는 IP 패킷의 흐름을 추적하는 것 못지않게 프락시를 넘나드는 메시지의 흐름을 추적하고 문제점을 찾아내는 것도 필요한 일이 되었다.
+
+### Via 헤더
+
+Via 헤더 필드는 메시지가 지나는 각 중간 노드(프락시나 게이트웨이)의 정보를 나열한다. 메시지가 또 다른 노드를 지날 때마다, 중간 노드는 Via 목록의 끝에 반드시 추가되어야 한다.  
+Via 헤더 필드는 메시지의 전달을 추적하고, 메시지 루프를 진단하고, 요청을 보내고 그에 대한 응답을 돌려주는 과정에 관여하는 모든 메시지 발송자들의 프로토콜을 다루는 능력을 알아보기 위해 사용된다.
+
+**Via 요청과 응답 경로**  
+요청 메시지와 응답 메시지 모두 프락시를 지나므로 둘 모두 Via 헤더를 가진다.  
+요청과 응답은 보통 같은 TCP 커넥션을 오가므로, 응답 메시지는 요청과 같은 경로를 되돌아간다.  
+즉, 응답의 Via 헤더는 거의 언제나 요청 Via 헤더와 반대다.
+
+**Via와 게이트웨이**  
+Via 헤더는 게이트웨이의 프로토콜 변환을 기록하므로 HTTP 애플리케이션은 프락시 연쇄에서 프로토콜 능력과 변환이 있었는지를 알아챌 수 있다.
+
+**Server 헤더와 Via 헤더**  
+Server 응답 헤더 필드는 원 서버에 의해 사용되는 소프트웨어를 알려준다.  
+응답 메시지가 프락시를 통과할 때, 프락시는 Server 헤더를 수정해서는 안 된다. 대신 프락시는 via 항목을 추가해야 한다.
+
+**Via가 개인정보 보호와 보안에 미치는 영향**  
+Via 문자열 안에 정확한 호스트 명이 들어가기를 원하지 않는 몇 가지 경우가 있다.  
+프락시는 방화벽 뒤에 숨어있는 호스트의 이름과 포트를 전달홰서는 안된다. 방화벽 뒤의 네트워크 아키텍처에 대한 정보가 악의적인 집단에 의해 이용될 수 있기 때문이다.  
+만약 Via 노드 이름 전달이 가능하지 않다면, 보안 경계선의 일부분인 프락시는 호스트 명을 그 호스트에 대한 적당한 가명으로 교체해야 한다.
+
+### TRACE 메서드
+
+프락시 서버는 메시지가 전달될 때 메시지를 바꿀 수 있다. 헤더가 추가되거나, 변경되거나, 삭제될 수 있으며, 본문이 다른 형식으로 변환될 수 있다.  
+TRACE 메서드는 요청 메시지를 프락시의 연쇄를 따라가면서 어떤 프락시를 지나가고 어떻게 각 프락시가 요청 메시지를 수정하는지 관찰/추적할 수있도록 해준다. 이는 프락시 흐름을 디버깅하는데 매우 유용하다.  
+TRACE 요청이 목적지 서버에 도착했을 때, 서버는 전체 요청 메시지를 HTTP 응답 메시지의 본문에 포함시켜 송신자에게 그대로 돌려보낸다.
+
+**Max-Forwards**  
+TRACE와 OPTIONS 요청의 프락시 홉 개수를 제한하기 위해 Max-Forwards 헤더를 사용할 수 있는데, 이는 전달되는 메시지가 무한 루프에 빠지지 않는지 프락시 연쇄를 테스트하거나 연쇄 중간의 특정 프락시 서버들의 효과를 체크할 때 유용하다.  
+Max-Forwards 요청 헤더 필드는 이 요청 메시지가 몇 번 더 다음 홉으로 전달될 수 있는지 말해주는 정수 하나를 담고 있다.  
+만약 값이 0이라면, 수신자는 자신이 원 서버가 아니라 할지라도 TRACE 메시지를 더 이상 전달하지 말고 반드시 클라이언트에게 돌려줘야 한다.
+
+## 프락시 인증
+
+HTTP는 사용자가 유효한 접근 권한 자격을 프락시에 제출하지 않는 한 콘텐츠에 대한 요청을 차단하는 프락시 인증이라는 메커니즘을 정의하고 있다.  
+프락시 인증은 인증에 참여하는 프락시가 프락시 연쇄상에 여러 개 있을 때는 일반적으로 잘 동작하지 않는다.
+
+## 프락시 상호운용성
+
+프락시 서버는 서로 다른 프로토콜을 구현했을 수도 있고 골치 아프게 이상한 동작을 할 수도 있는 클라이언트와 서버 사이를 중개해야 한다.
+
+### 지원하지 않는 헤더와 메서드 다루기
+
+프락시 서버는 넘어오는 헤더 필드들을 모두 이해하지 못할 수도 있다.  
+프락시는 이해할 수 없는 헤더 필드는 반드시 그대로 전달해야 하며, 같은 이름의 헤더 필드가 여러 개 있는 경우에는 그들의 상대적인 순서도 반드시 유지해야 한다.
+
+### OPTIONS: 어떤 기능을 지원하는지 알아보기
+
+OPTIONS 메서드는 서버에서 지원하거나 지정한 리소스에 대해 가능한 선택적인 기능들을 서술하는 여러 헤더 필드를 포함한 응답을 반환한다.  
+하지만 HTTP/1.1이 명시한 헤더는 Allow 헤더 뿐이다.
