--- a/_posts/2022-04-04-0328-0403.md
+++ b/_posts/2022-04-04-0328-0403.md
@@ -16,11 +16,11 @@ excerpt: ""
 
 ### 레거시 설계
 
-- 리팩토링, 테스트가 어려운 규모가 큰 컴포넌트
+- 리팩토링, 테스트가 어려운 규모가 큰 컴포넌트
 - 컴포넌트 간 중복된 상태, 라이프 사이클
 - Render Props, HOC와 같은 복잡한 패턴
   - React 컴포넌트 간에 로직을 재사용하기 위해 사용된 Render Props, HOC 패턴은 코드 추적을 어렵게 한다.
-  - 컨텍스트 공급/수요자, 고차 컴포넌트 등을 포함한 수많은 추상 레이어로 복잡하게 엮여진 래퍼 지옥을 보게 된다.
+  - 컨텍스트 공급/수요자, 고차 컴포넌트 등을 포함한 수많은 추상 레이어로 복잡하게 엮여진 래퍼 지옥을 보게 된다.
 
 -> 문제의 원인을 리액트 팀은 클래스 컴포넌트에서 로직 재사용을 위해 사용되었던 복잡한 방식보다 간단한 방법을 제공하지 못했기 때문이라고 분석했다.
 
@@ -190,3 +190,83 @@ useEffect(() => {
   - 그렇지 않으면 현재 값이 아닌 이전의 렌더링 때의 값을 참고하게 된다.
 - effect를 실행하고 이를 정리하는 과정을 딱 한 번씩만 실행하고 싶다면, 빈 배열을 두 번째 인수로 넘기면 된다.
   - 이렇게 함으로써 리액트로 하여금 effect가 props나 state 그 어떤 값에도 의존하지 않으며 따라서 재실행되어야 할 필요가 없음을 알게 하는 것이다.
+
+<br />
+<br />
+<br />
+
+## 0329
+
+# custom hook
+
+커스텀 훅은 기술적으로 React 만의 고유 기능이 아니라, 이름이 use로 시작하는 일반적인 JavaScript 함수이다.  
+이를 통해 복잡한 로직을 컴포넌트에서 분리하여 다른 컴포넌트에서 손쉽게 재사용할 수 있다.
+
+예를 들어, 뷰포트 정보를 여러 컴포넌트에서 표시해야 한다고 가정해보자  
+이런 경우 특정 컴포넌트 내부에서만 사용되도록 로직을 구성하기 보다는, 다른 컴포넌트에서도 재사용 할 수 있도록 로직을 구성해야 한다.
+
+```javascript
+import { useState, useEffect } from "react";
+
+export const useViewport = () => {
+  const { innerWidth, innerHeight } = window;
+  const [width, setWidth] = useState(innerWidth);
+  const [height, setHeight] = useState(innerHeight);
+
+  useEffect(() => {
+    const handleResize = () => {
+      setWidth(window.innerWidth);
+      setHeight(window.innerHeight);
+    };
+
+    window.addEventListener("resize", handleResize);
+    return () => window.removeEventListener("resize", handleResize);
+  }, []);
+
+  return { width, height };
+};
+```
+
+- 커스텀 훅은 useStatel, useEffect와 같은 기본 Hooks를 활용한다.
+- 이처럼 여러 컴포넌트에서 재사용 가능한 로직을 손쉽게 분리, 재사용할 수 있어 커스텀 훅을 사용하는 것은 React의 고유 API를 사용하는 것처럼 일반적이다.
+
+## 데이터 패치 Hook
+
+데이터 요청/응답과 같이 자주 사용되는 사이드 이펙트 로직 또한 커스텀 훅을 사용해 재사용할 수 있다.
+
+```javascript
+import { useState, useEffect } from "react";
+import axios from "axios";
+
+function useFetchData(apiEndpoint) {
+  const [state, setState] = useState({
+    loading: true,
+    data: null,
+    error: null,
+  });
+
+  useEffect(() => {
+    async function getData() {
+      try {
+        const { data } = await axios.get(apiEndpoint);
+        setState({ ...state, data });
+      } catch (error) {
+        setState({ ...state, error });
+      } finally {
+        setState({ ...state, loading: false });
+      }
+    }
+
+    getData();
+  }, [apiEndpoint]);
+
+  return state;
+}
+```
+
+- 이는 커스텀 훅을 사용하지 않은 코드와 동일한 코드로, 정확히 같은 방식으로 작동한다.
+- 바뀐 것은 오로지 공통의 코드를 뽑아내 새로운 함수로 만든 것뿐이다.
+- 커스텀 훅은 리액트의 특별한 기능이라기보다 기본적으로 디자인을 따르는 관습이다.
+- 커스텀 훅을 작성할 때 이름은 use로 시작해야 하는데, 이를 따르지 않으면 특정한 함수가 그 안에서 Hook을 호출하는지를 알 수 없기 때문에 Hook 규칙의 위반 여부를 자동으로 체크할 수 없다.
+- 같은 훅을 사용하더라도 두 개의 컴포넌트는 state를 공유하지 않는다. 커스텀 훅은 재사용하는 메커니즘이지만 사용할 때마다 그 안의 state와 effect는 완전히 독립적이다.
+- 너무 이른 단계에서 로직을 뽑아내려고 하기 보다는, 커스텀 훅이 복잡한 로직을 단순한 인터페이스 속에 숨길 수 있도록 하거나 복잡하게 뒤엉킨 컴포넌트를 풀어내도록 돕는 경우를 찾아내서 사용하자.
