--- a/_posts/2022-04-04-0328-0403.md
+++ b/_posts/2022-04-04-0328-0403.md
@@ -401,3 +401,112 @@ type Measurement = {
 - TSDoc 주석은 마크다운 형식으로 꾸며지므로 굵은 글씨, 기울임 글씨 등을 사용할 수 있다.
 - 주석은 간단히 요점만 언급한다.
 - 타입스크립트에서는 타입 정보가 코드에 있기 때문에 타입 정보를 명시하면 안 된다.
+
+<br />
+<br />
+<br />
+
+## 0331
+
+# 콜백에서 this에 대한 타입 제공하기
+
+let이나 const로 선언된 변수가 렉시컬 스코프인 반면, this는 다이나믹 스코프이다. 다이나믹 스코프의 값은 정의된 방식이 아니라 호출된 방식에 따라 달라진다.
+
+this 바인딩은 종종 콜백 함수에서 쓰인다.
+
+```typescript
+class ResetButton {
+  onClick() {
+    alert(`Reset ${this}`);
+  }
+}
+```
+
+그러나 onClick을 호출하면, this 바인딩 문제로 인해 경고가 뜬다.
+
+일반적인 해결책은 생성자에서 메서드에 this를 바인딩시키는 것이다.
+
+```typescript
+class ResetButton {
+  constructor() {
+    this.onClick = this.onClick.bind(this);
+  }
+
+  onClick() {
+    alert(`Reset ${this}`);
+  }
+}
+```
+
+- 생성자에서 위와 같이 바인딩하면, onClick 속성에 this가 바인딩되어 해당 인스턴스에 생성된다.
+- 프로퍼티 탐색 순서에서 onClick 인스턴스 속성은 onClick 프로토타입 속성보다 앞에 놓이므로, this.onClick은 바인딩된 함수를 참조하게 된다.
+- 더 간단한 방법은 onClick을 화살표 함수로 바꾸는 것이다.
+
+타입스크립트 역시 this 바인딩을 그대로 모델링하게 된다. 만약 작성 중인 라이브러리에 this를 사용하는 콜백 함수가 있다면, this 바인딩 문제를 고려해야 한다.  
+이 문제는 콜백 함수의 매개변수에 this를 추가하고, 콜백 함수를 call로 호출해서 해결할 수 있다.
+
+```typescript
+function addKeyListener(
+  el: HTMLElement,
+  fn: (this: HTMLElement, e: KeyboardEvent) => void
+) {
+  el.addEventListener("keydown", (e) => {
+    fn.call(el, e);
+  });
+}
+```
+
+- 콜백 함수의 첫 번째 매개변수에 있는 this는 특별하게 처리된다.
+- call을 제거하고 사용하면 타입 에러가 발생하고, this 바인딩도 체크해준다.
+- 그리고 라이브러리 사용자의 콜백 함수에서 this를 참조할 수 있고 완전한 타입 안정성도 얻을 수 있다.
+- 만약 라이브러리 사용자가 콜백을 화살표 함수로 작성하고 this를 참조하려고 하면 타입스크립트가 문제를 잡아낸다.
+- 이처럼 콜백 함수에서 this 값을 사용해야 한다면 this는 API의 일부가 되는 것이기 때문에 반드시 선언 타입에 포함해야 한다.
+
+# 오버로딩 타입보다는 조건부 타입을 사용하기
+
+string 또는 number 타입의 매개변수가 들어올 수 있는 double 함수에 타입 정보를 추가해보자  
+이때 함수 오버로딩 개념을 사용했다.
+
+```typescript
+function double(x: number | string): number | string;
+function double(x: any) {
+  return x + x;
+}
+```
+
+- double에 number 타입을 매개변수를 넣으면 number 타입을 반환해야 하지만 선언문에는 number 타입을 매개변수로 넣고 string 타입을 반환하는 경우도 포함되어 있다.
+- 제너릭을 사용하면 이러한 동작을 모델링 할 수 있지만, 타입이 너무 과하게 구체적이다. string 타입을 매개변수로 넘기면 string 타입이 반환되어야 한다.
+
+또 다른 방법은 여러 가지 타입 선언으로 분리하는 것이다.  
+타입스크립트에서 함수의 구현체는 하나지만, 타입 선언은 몇 개든지 만들 수 있다.
+
+```typescript
+function double(x: number): number;
+function double(x: string): string;
+function double(x: any) {
+  return x + x;
+}
+```
+
+- 이를 활용하여 double의 타입을 개선할 수 있지만, 아직도 버그는 남아 있다.
+- string이나 number 타입의 값으로는 잘 동작하지만, 유니온 타입 관련해서 문제가 발생한다.
+- 세 번째 오버로딩을 추가하여 문제를 해결할 수도 있지만, 가장 좋은 해결책은 조건부 타입을 사용하는 것이다.
+
+```typescript
+function double<T extends number | string>(
+  x: T
+): T extends string ? string : number;
+function double(x: any) {
+  return x + x;
+}
+```
+
+- 이 코드는 제너릭을 사용했던 방법과 유사하지만, 반환 타입이 더 정교하다.
+- 조건부 타입은 삼항 연산자처럼 사용하면 된다.
+- T가 string의 부분집합이면, 반환 타입이 string이고 그 외의 경우는 반환 타입이 number이다.
+
+## 결론
+
+- 유니온에 조건부 타입을 적용하면, 조건부 타입의 유니온으로 분리되기 때문에 동작한다.
+- 오버로딩 타입이 작성하기는 쉽지만, 조건부 타입은 개별 타입의 유니온으로 일반화하기 때문에 타입이 더 정확해진다.
+- 오버로딩 타입을 작성하는 경우, 조건부 타입을 사용해서 개선할 수 있을지 검토해 보는 것이 좋다.
