--- a/_posts/2022-04-04-0328-0403.md
+++ b/_posts/2022-04-04-0328-0403.md
@@ -1,5 +1,5 @@
 ---
-title: "0328 - 0404"
+title: "0328 - 0403"
 tag: TIL
 category: TIL
 excerpt: ""
@@ -510,3 +510,158 @@ function double(x: any) {
 - 유니온에 조건부 타입을 적용하면, 조건부 타입의 유니온으로 분리되기 때문에 동작한다.
 - 오버로딩 타입이 작성하기는 쉽지만, 조건부 타입은 개별 타입의 유니온으로 일반화하기 때문에 타입이 더 정확해진다.
 - 오버로딩 타입을 작성하는 경우, 조건부 타입을 사용해서 개선할 수 있을지 검토해 보는 것이 좋다.
+
+<br />
+<br />
+<br />
+
+## 0401
+
+# 의존성 분리를 위해 미러 타입 사용하기
+
+CSV 파일을 파싱하는 라이브러리를 작성한다고 가정해보자.  
+parseAPI는 매개변수로 string이나 NodeJS 사용자를 위해 매개변수에 Buffer 타입을 허용한다.  
+Buffer의 타입 정의는 NodeJS 타입 선언을 설치해서 얻을 수 있다.
+
+이때 타입 선언이 @types/node에 의존하기 때문에 @types/node는 devDependencies로 포함해야 한다.  
+그러나 @types/node를 devDependencies로 포함하면 다음 두 그룹의 라이브러리 사용자들에게 문제가 생긴다.
+
+- @types와 무관한 JS 개발자
+- NodeJS와 무관한 TS 웹 개발자
+
+Buffer는 NodeJS와 TS를 동시에 사용하는 개발자만 관련된다.
+
+각자가 필요한 모듈만 사용할 수 있도록 구조적 타이핑을 적용할 수 있다.  
+@types/node에 있는 Buffer 선언을 사용하지 않고, 필요한 메서드와 속성만별도로 작성할 수 있다.  
+만약 작성 중인 라이브러리가 의존하는 라이브러리의 구현과 무관하게 타입에만 의존한다면, 필요한 선언부만 추출하여 작성 중인 라이브러리에 넣는 것(미러링)을 고려해 보는 것도 좋다.  
+그러나 프로젝트 의존성이 다양해지고 필수 의존성이 추가됨에 따라 타입 선언의 대부분을 추출해야 한다면, 차라리 명시적으로 @types 의존성을 추가하는 게 낫다.
+
+# 테스팅 타입의 함정에 주의하기
+
+프로젝트를 공개하려면 테스트 코드를 작성하는 것은 필수이며, 타입 선언도 테스트를 거쳐야 한다.  
+그러나 타입 선언을 테스트하기는 매우 어렵다. 궁극적으로는 dtslint 또는 타입 시스템 외부에서 타입을 검사하는 유사한 도구를 사용하는 것이 더 안전하고 간단하다.
+
+타입 선언 파일을 테스팅할 때는 단순히 함수를 실행만 하는 방식을 일반적으로 적용하게 되는데, 그 이유는 라이브러리 구현체의 기존 테스트 코드를 복사하면 간단히 만들 수 있기 때문이다.  
+함수를 실행만 하는 테스트 코드가 의미 없는 것은 아니지만, 실제로 반환 타입을 체크하는 것이 훨씬 좋은 테스트 코드이다.
+
+반환 값을 특정 타입의 변수에 할당하여 간단히 반환 타입을 체크할 수 있는 방법
+
+```typescript
+const lengths: number[] = map(["john", "paul"], (name) => name.length);
+```
+
+- 이 코드는 일반적으로 불필요한 타입 선언에 해당한다.
+- 그러나 테스트 코드 관점에서는 중요한 역할을 한다. `number[]` 타입 선언은 map 함수의 반환 타입이 `number[]`임을 보장한다.
+- 실제로 DefinitelyTyped를 살펴보면, 테스팅을 위해 정확히 동일한 방식을 사용한 수많은 타입 선언을 볼 수 있다.
+
+그러나 테스팅을 위해 할당을 사용하는 방법에는 두 가지 근본적인 문제가 있다.
+
+1. 불필요한 변수를 만들어야 한다.
+   반환값을 할당하는 변수는 샘플 코드처럼 쓰일 수도 있지만, 일부 린팅 규칙(미사용 변수 경고)을 비활성해야 한다.  
+   일반적인 해결책은 변수를 도입하는 대신 헬퍼 함수를 정의하는 것이다.
+
+```typescript
+function assertType<T>(x: T) {}
+
+assertType<number[]>(map(["john", "paul"], (name) => name.length));
+```
+
+2. 두 타입이 동일한지 체크하는 것이 아니라 할당 가능성을 체크하고 있다.
+   객체의 타입을 체크하는 경우 문제를 발견하게 된다.
+
+```typescript
+const beatles = ["john", "paul", "george", "ringo"];
+assertType<{ name: string }[]>(
+  map(beatles, (name) => ({
+    name,
+    inYellowSubmarine: name === "ringo",
+  }))
+);
+```
+
+반환된 배열은 할당 가능하지만, inYellowSubmarine 속성에 대한 부분이 체크되지 않았다.
+상황에 따라 타입이 정확한지 체크할 수도 있고, 할당이 가능한지 체크할 수도 있다.
+
+assertType에 함수를 넣어 보면, 이상한 결과가 나타난다.
+
+```typescript
+const add = (a: number, b: number) => a + b;
+assertType<(a: number, b: number) => number>(add);
+
+const double = (x: number) => 2 * x;
+assertType<(a: number, b: number) => number>(double);
+```
+
+- double 함수 체크가 성공하는 이유는, TS의 함수는 매개변수가 더 적은 함수 타입를 할당 가능하기 때문이다.
+- 이러한 사례는 콜백 함수에서 흔히 볼 수 있는데, 예를 들어 map 함수의 콜백은 3 가지 매개변수를 받지만 이를 모두 사용하는 경우는 매우 드물다.
+- 만약 매개변수의 개수가 맞지 않는 경우를 타입 체크에서 허용하지 않으면, 매우 많은 곳에서 오류가 발생할 것이다.
+
+그렇다면 어떻게 assertType을 제대로 사용할 수 있을까?  
+Parameters와 ReturnType 제너릭 타입을 이용해 함수의 매개변수 타입과 반환 타입만 분리하여 테스트할 수 있다.
+
+```typescript
+const p: Parameters<typeof double> = null!;
+assertType<[number, number]>(p);
+// '[x: number]' 형식의 인수는 '[number, number]' 형식의 매개 변수에 할당될 수 없습니다.
+
+const r: ReturnType<typeof double> = null!;
+assertType<number>(r);
+```
+
+this가 등장하는 콜백 함수의 경우 또 다른 문제가 있다. map은 콜백 함수에서 this의 값을 사용할 때가 있으며 TS는 이러한 동작을 모델링할 수 있으므로, 타입 선언에 반영해야 하며 테스트도 해야 한다.
+
+```typescript
+assertType<number[]>(
+  map(beatles, function (name, i, array) {
+    // '(name: any, i: any, array: any) => any' 형식의 인수는 '(u: string) => any' 형식의 매개 변수에 할당될 수 없습니다.
+    assertType<string>(name);
+    assertType<number>(i);
+    assertType<string[]>(array);
+    assertType<string[]>(this);
+    // 'this'에는 형식 주석이 없으므로 암시적으로 'any' 형식이 포함됩니다.
+
+    return name.length;
+  })
+);
+```
+
+- 콜백 함수 내부에서 몇 가지 문제가 발생한다. 이 콜백 함수는 화살표 함수가 아니기 때문에 this의 타입을 테스트할 수 있다.
+- 다음 코드 선언을 사용하면 타입 체크를 통과한다.
+
+```typescript
+declare function map<U, V>(
+  array: U[],
+  fn: (this: U[], u: U, i: number, array: U[]) => V
+): V[];
+```
+
+다음 모듈 선언은 까다로운 테스트를 통과할 수 있는 완전한 타입 선언 파일이지만, 결과적으로 좋지 않은 설계가 된다.
+
+```typescript
+declare module "overbar";
+```
+
+- 이 선언은 전체 모듈에 any 타입을 할당한다.
+- 모든 테스트를 통과하겠지만, 모든 타입 안전성을 포기하게 된다.
+- 더 나쁜 점은, 해당 모듈에 속하는 모든 함수의 호출마다 any 타입을 반환하기 때문에 코드 전반에 걸쳐 타입 안정성을 무너뜨리게 된다.
+- 타입 시스템 내에서 암시적 any 타입을 발견해내는 것은 매우 어렵다. 그렇기에 타입 체커와 독립적으로 동작하는 도구를 사용해서 타입 선언을 테스트하는 방법이 권장된다.
+- DefinitelyTyped의 타입 선언을 위한 도구는 dtslint이다. 이는 특별한 형태의 주석을 통해 동작한다.
+
+```typescript
+map(
+  beatles,
+  function (
+    name, // $ExpectType string
+    i, // $ExpectType number
+    array // $ExpectType string[]
+  ) {
+    this; // $ExpectType string[]
+
+    return name.length;
+  }
+); // $ExpectType number[]
+```
+
+- dtslint는 할당 가능성을 체크하는 대신 각 심벌의 타입을 추출하여 글자 자체가 같은지 비교한다.
+- 이 비교 과정은 편집기에서 타입 선언을 눈으로 보고 확인하는 것과 같은데, dtslint는 이 과정을 자동화한다.
+- 글자 자체가 같은지 비교하는 방식에는 단점이 있는데, `number | string`과 `string | number`는 같은 타입이지만 글자 자체로 보면 다르기 때문에 다른 타입으로 인식된다.
