fix: 글자 마크다운 변경

--- a/_posts/2022-04-07-0404-0410.md
+++ b/_posts/2022-04-07-0404-0410.md
@@ -131,7 +131,7 @@ for (k in obj) {
 - keyof 키워드를 사용한 방법은 v가 `string | number` 타입으로 한정되어 범위가 너무 좁아 문제가 될 수 있다.
 - 추가적인 키를 가진 객체가 할당될 수 있기에 v의 타입을 이러게 추론한 것은 잘못이며 런타임 동작을 예상하기 어렵다.
 
-단지 객체의 키와 값을 순회하고 싶다면 Object.entries를 사용하면 된다.
+단지 객체의 키와 값을 순회하고 싶다면 `Object.entries`를 사용하면 된다.
 
 ```typescript
 interface ABC {
